add favorite button and some style

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<header>
+  <nav>
+    <h1 id="title">
+      {{ title }}!
+    </h1>
+    <a>Home</a>
+    <a>Favorites</a>
+  </nav>
+</header>
+<section id="search-bar">
   <app-search-bar></app-search-bar>
-</div>
+</section>
