add LocalStorage service and favorite methods

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,3 @@
-<input type="text" role="text"  [(ngModel)]="query">
+<input id="search-bar" type="text" role="text" [(ngModel)]="query">
 
 <app-beers [query]='query'></app-beers>
