--- a/src/app/beers/beers.component.html
+++ b/src/app/beers/beers.component.html
@@ -1,7 +1,7 @@
 <button (click)="getBeer(query)">Find my Beer!</button>
 
 <section class="flex">
-  <div class="beer-info" *ngFor="let beer of allBeers">
+  <div id="{{beer.id}}" class="beer-info" *ngFor="let beer of allBeers">
     <div class="favorite-icon" (click)="addFavorite($event, beer.id)"></div>
     <img src="{{beer.image_url}}">
     <article class="description">
