--- a/src/app/beer-details/beer-details.component.html
+++ b/src/app/beer-details/beer-details.component.html
@@ -1,6 +1,7 @@
 <article id="details" *ngIf="beer; else noInfo">
   <button class="push-right" (click)="goBack()">go back</button>
   <section class="flex">
+    <div id="beer-spec" class="favorite-icon" (click)="addFavorite()"></div>
     <img class="col-3 img-beer" src="{{beer.image_url}}" alt="an image of the beer">
     <div class="col-9 text-left">
       <h1>{{beer.name}}</h1>
