add aria-label and fixed some bugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
         <a routerLink="/favorites">Favorites</a>
       </nav>
 </header>
-<section id="search-bar">
+<section id="search-component">
   <router-outlet></router-outlet>
 </section>
