--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,5 +1,7 @@
+
+
 nav
-    background: darkseagreen
+    background: white
     text-align: right
     height: 50px
     margin: -8px
@@ -14,6 +16,6 @@ nav
         margin: 15px
         display: inline-block
 
-#search-bar
+#search-component
     text-align: center
     margin-top: 50px
