--- a/src/app/beer-details/beer-details.component.sass
+++ b/src/app/beer-details/beer-details.component.sass
@@ -28,3 +28,8 @@ h1
 
 .push-right
     float: right
+
+.big-star
+    font-size: 60px !important
+    position: relative !important
+    float: right
