--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,3 +1,3 @@
-<input id="search-bar" type="text" role="text" [(ngModel)]="query">
+<input id="search-bar" type="search" [(ngModel)]="query" aria-label="Write the name of the beer to search">
 
 <app-beers [query]='query'></app-beers>
