add Tests on beer.component

--- a/src/app/beers/beers.component.html
+++ b/src/app/beers/beers.component.html
@@ -1,8 +1,17 @@
 <button id="search-button" (click)="getBeer(query)">Find Beers!</button>
 
+<label for="order-option"></label>
+<select appSortBy (sorted)="sort($event)" id="order-option">
+  <option disabled>Sort By...</option>
+  <option value="name">Name</option>
+  <option value="first_brewed">Year</option>
+  <option value="abv">Alcohol</option>
+</select>
+
 <section class="flex" *ngIf="allBeers.length > 0; else noInfo">
-  <div id="{{beer.id}}" class="beer-info" *ngFor="let beer of allBeers" >
-    <button class="favorite-icon" type="checkbox" [ngClass]="{'favorite': checkFavorite(beer.id)}" (click)="addFavorite(beer.id)" aria-label="click to add or remove this beer to your favorite list"></button>
+  <div id="{{beer.id}}" class="beer-info" *ngFor="let beer of allBeers">
+    <button class="favorite-icon" type="checkbox" [ngClass]="{'favorite': checkFavorite(beer.id)}" (click)="addFavorite(beer.id)"
+      aria-label="click to add or remove this beer to your favorite list"></button>
     <img src="{{beer.image_url}}" alt="{{beer.name}}">
     <article class="description">
       <h2>{{beer.name | maxLength:30}}</h2>
