--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
         <h1 id="title">
         {{ title }}!
         </h1>
+        <span><h2>Find your favorite Beer!</h2></span>
         <a routerLink="/home">Home</a>
         <a routerLink="/favorites">Favorites</a>
       </nav>
