--- a/src/app/beer-details/beer-details.component.sass
+++ b/src/app/beer-details/beer-details.component.sass
@@ -33,3 +33,15 @@ h1
     font-size: 60px !important
     position: relative !important
     float: right
+
+@media (max-width: 500px)
+    .img-beer
+        order: 2
+        margin: 30px
+        width: 100%!important
+    #back-button
+        position: fixed!important
+    #details-content
+        width: 100%
+    .big-star
+        float: unset
