--- a/src/app/beers/beers.component.sass
+++ b/src/app/beers/beers.component.sass
@@ -1,9 +1,21 @@
 $primaryColor:  #3867ff
 $shadows: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2)
 
+@media (max-width: 500px)
+    .beer-info
+        width:  240px
+        min-width: 240px
+        height: 300px!important
+        margin: 10px auto
+
+    .flex
+        padding: 0
+
+    #order-option
+        width: 20px
+
 .beer-info
     width:  340px
-    min-width: 340px
     height: 250px
     min-height: 250px
     border: 1px solid grey
@@ -12,8 +24,8 @@ $shadows: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2)
     display: flex
     flex-wrap: wrap
     overflow: hidden
-    margin: 20px
-    //margin: 10px auto 10px
+    //margin: 20px
+    margin: 10px auto
     position: relative
     border-left: 6px solid $primaryColor
 
@@ -39,6 +51,7 @@ $shadows: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2)
     flex-wrap: wrap
     margin: 30px auto
     position: relative
+    max-width: 1170px
 
 .favorite-icon
     position: absolute
@@ -74,10 +87,63 @@ $shadows: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2)
     border-radius: 10px
     cursor: pointer
 
-#search-button
-    background: $primaryColor
-    color: white
-    width: 120px
-    height: 38px
-    font-size: larger
-    margin-left: 10px
+#search-form
+    background-color: #fff
+    border: 1px #ccc solid
+    padding: 0
+    box-shadow: 0 2px 4px rgba(0,0,0,.3)
+    max-width: 500px
+    width: 90%
+    margin: auto
+    outline: none
+    position: relative
+    height: 45px
+
+    #search-bar, #search-button
+        outline: none
+        border: 0
+
+    #search-bar
+        position: absolute
+        height: 45px
+        max-width: 350px
+        width: 60%
+        font-size: 20px
+        left: 10px
+
+    #search-button
+        background: #fff url("https://img.icons8.com/ios/50/000000/beer.png") no-repeat
+        overflow: hidden
+        vertical-align: top
+        height: 45px
+        width: 45px
+        color: $primaryColor
+        position: absolute
+        right: 0
+        background-size: contain
+        cursor: pointer
+
+.beer-info:hover
+    box-shadow: 0 2px 4px 3px rgba(0,0,0,.3)
+    transition: box-shadow 0.3s ease-in-out
+
+#order-option
+    position: absolute
+    right: 50px
+    height: 45px
+    border: 0
+    cursor: pointer
+
+input[type=text]::-ms-clear
+    display: none
+    width: 0
+    height: 0
+input[type=text]::-ms-revea
+    display: none
+    width : 0
+    height: 0
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration
+    display: none
