--- a/src/app/favorites/favorites.component.sass
+++ b/src/app/favorites/favorites.component.sass
@@ -1,5 +1,11 @@
 #filter
-    height: 30px
-    width: 300px
     font-size: 20px
-    box-shadow: inset 0 2px 4px 0 hsla(0, 0%, 0%, 0.08)
+    background-color: #fff
+    border: 1px #ccc solid
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3)
+    max-width: 500px
+    width: 90%
+    margin: auto
+    outline: none
+    position: relative
+    height: 45px
